--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/alex/bukkit/craftbukkit-1.2.5-R4.0.jar">
+	<classpathentry kind="lib" path="C:/Users/alex/minecraft/bukkit/plugins/spoutplugin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alex/minecraft/bukkit/bukkit-1.2.5-R4.0.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs"/>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/alex/Desktop/Spoutcraft.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://jd.spout.org/legacy/client/360/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/alex/bukkit/plugins/spoutplugin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
