--- a/plugin.yml
+++ b/plugin.yml
@@ -4,5 +4,5 @@ author: hammale
 main: me.hammale.hp.HarryPotter
 depend: [Spout]
 commands:
-  test:
-    description: test
+  quidditch:
+    description: Quidditch
